fixed: border and margin issue when a visible note is preceded by a hidden note

--- a/src/sass/core/_main.scss
+++ b/src/sass/core/_main.scss
@@ -154,7 +154,7 @@ $media-margin: 10px;
     }
 }
 
-.note + .note {
+.note:not(.disabled) + .note {
     border-top: none;
     border-bottom: none;
     @include border-radius(0);
